--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,7 +1,10 @@
 // Buttons
 $button-padding-y: 4px;
 $primary: white;
+$primary-darker-1: #b4b4b4;
+$primary-darker-2: #f5f5f5;
 $secondary: blue;
+
 $btn-padding-y: $button-padding-y;
 $btn-padding-y-sm: $button-padding-y;
 $btn-padding-y-lg: $button-padding-y;
@@ -23,5 +26,14 @@ $offcanvas-horizontal-width: 100px;
 // Carousel
 $carousel-control-color: black;
 $carousel-indicator-active-bg: black;
+
+// Pagination
+$pagination-focus-color: $secondary;
+$pagination-focus-bg: $primary-darker-1;
+$pagination-hover-color: $secondary;
+$pagination-hover-bg: $primary-darker-2;
+$pagination-active-color: $secondary;
+$pagination-active-bg: $primary-darker-1;
+$pagination-active-border-color: $primary-darker-1;
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
