--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,6 @@
 
 .btn {
     width: fit-content;
-    /* height: 2.2rem; */
 }
 
 .bg-primary {
@@ -63,16 +62,10 @@
     color: var(--secondary-color) !important;
 }
 
-/* Own css classes */
-/* html { */
-/* -ms-overflow-style: none; /* IE and Edge */
-/* scrollbar-width: none; Firefox */
-/* width: 100%; */
-/* } */
+.border-secondary {
+    border-color: var(--secondary-color) !important;
+}
 
-/* html::-webkit-scrollbar {
-    /* display: none; 
-} */
 html {
     width: 100%;
     box-sizing: border-box;
@@ -84,11 +77,53 @@ body {
     min-width: 100vw;
 }
 
-#cart-summary-container {
+#cart-summary-section {
     top: 4.6rem;
     height: 75vh;
-    width: max(10vw, 12rem);
+    width: min(65vw, 16rem);
 }
+
+#cart-button {
+    transition: transform 0.5s ease;
+    /* position: absolute; */
+    /* right: 1rem; */
+    /* height: 100%; */
+}
+
+#cart-button:hover {
+    /* transform: scale(1.2); */
+    /* color: white !important; */
+}
+
+.active-btn {
+    transform: scale(1.2);
+    /* color: var(--primary-color) !important; */
+}
+
+#cart-badge {
+    font-size: 0.5rem;
+}
+
+/* CART BOOK CART */
+
+[data-cart-book-img] {
+    width: 60px;
+    height: 100px;
+}
+
+[data-cart-book-title] {
+    font-size: clamp(0.875rem, -0.25rem + 6vw, 1.25rem);
+}
+
+[data-cart-book-delete] {
+    font-size: 0.85rem;
+    transition: transform 0.5s ease;
+}
+
+[data-cart-book-delete]:hover {
+    transform: scale(1.2);
+}
+
 /* 
 #cart-button {
     background-color: var(--primary-color) !important;
@@ -98,6 +133,7 @@ body {
 
 .header {
     background: no-repeat center center/cover;
+    height: 100vh;
 }
 
 .navbar {
@@ -106,6 +142,10 @@ body {
     opacity: 0.95;
     animation: onload 4s ease-in-out;
     transition: opacity 2s ease;
+}
+
+.navbar-brand {
+    font-size: clamp(0.875rem, 0.684rem + 1.1321vw, 1.25rem);
 }
 
 #contact-link:hover {
@@ -252,10 +292,19 @@ body {
 @media (max-width: 991px) {
     #cart-button {
         height: 2.5rem;
+        position: static;
     }
 }
 
 @media (max-width: 767px) {
+    #carousel {
+        top: 60vh !important;
+    }
+
+    .header {
+        height: 75vh;
+    }
+
     .recommended-books-card {
         width: 100%;
         justify-content: center;
@@ -278,12 +327,12 @@ body {
 
     /* || SIDEBAR  */
     .sidebar-container {
-        width: min(22vw, 18rem);
+        width: 5rem;
     }
 
     .sidebar-expanded {
         position: absolute;
-        width: min(85vw, 18rem) !important;
+        width: min(75vw, 15rem) !important;
     }
 
     .sidebar-title {
@@ -291,7 +340,7 @@ body {
     }
 
     .genres-books-section {
-        width: calc(100vw - min(22vw, 18rem)) !important;
+        width: calc(100vw - 5rem) !important;
         /* /* width: 60%;  */
     }
 
