--- a/css/styles.css
+++ b/css/styles.css
@@ -111,8 +111,13 @@ body {
     /* color: var(--primary-color) !important; */
 }
 
-#cart-badge {
-    font-size: 0.5rem;
+.cart-button-container {
+    width: 5rem;
+}
+
+#cart-quantity-badge {
+    width: 1.5rem;
+    font-size: 0.6rem;
 }
 
 /* CART BOOK CART */
