--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,7 @@ body {
 
 #cart-button {
     transition: transform 0.5s ease;
-    width: 6rem;
+    width: 100%;
     /* position: absolute; */
     /* right: 1rem; */
     /* height: 100%; */
@@ -117,7 +117,7 @@ body {
 }
 
 #cart-quantity-badge {
-    width: 1.5rem;
+    width: 1.3rem;
     font-size: 0.6rem;
 }
 
