--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,7 @@ body {
 
 #cart-button {
     transition: transform 0.5s ease;
-    width: 100%;
+    /* width: 100%; */
     /* position: absolute; */
     /* right: 1rem; */
     /* height: 100%; */
