--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,7 @@ body {
 [data-cart-book-title] {
     font-size: clamp(0.75rem, 0.5625rem + 1vw, 1rem);
     max-height: 8rem;
+    width: 8rem;
     /* font-size: clamp(0.875rem, -0.25rem + 6vw, 1.25rem); */
 }
 
@@ -345,7 +346,7 @@ body {
     }
 
     [data-cart-book-img] {
-        width: 40px;
+        width: 50px;
         height: 80px;
     }
 
