--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,11 @@ body {
 #cart-button {
     transition: transform 0.5s ease;
     cursor: pointer;
+    opacity: 0.8;
+}
+
+#cart-button:hover {
+    opacity: 1;
 }
 
 .active-btn {
@@ -135,8 +140,8 @@ body {
     transition: transform 0.5s ease;
 }
 
-[data-cart-book-delete]:hover {
-    transform: scale(1.2);
+[data-cart-book-remove]:hover {
+    transform: scale(1.17);
 }
 
 .remove-item-modal {
