--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 /* Overwrite default bootstrap */
 :root {
     --primary-color: white;
@@ -17,6 +24,8 @@
 }
 
 .btn {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
     width: fit-content;
 }
 
@@ -68,6 +77,7 @@
 
 html {
     width: 100%;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -95,7 +105,11 @@ body {
 }
 
 #cart-button {
+    -webkit-transition: -webkit-transform 0.5s ease;
+    transition: -webkit-transform 0.5s ease;
+    -o-transition: transform 0.5s ease;
     transition: transform 0.5s ease;
+    transition: transform 0.5s ease, -webkit-transform 0.5s ease;
     cursor: pointer;
     opacity: 0.8;
 }
@@ -105,6 +119,8 @@ body {
 }
 
 .active-btn {
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
     transform: scale(1.2);
 }
 
@@ -137,10 +153,16 @@ body {
 
 [data-cart-book-delete] {
     font-size: 0.85rem;
+    -webkit-transition: -webkit-transform 0.5s ease;
+    transition: -webkit-transform 0.5s ease;
+    -o-transition: transform 0.5s ease;
     transition: transform 0.5s ease;
+    transition: transform 0.5s ease, -webkit-transform 0.5s ease;
 }
 
 [data-cart-book-remove]:hover {
+    -webkit-transform: scale(1.17);
+    -ms-transform: scale(1.17);
     transform: scale(1.17);
 }
 
@@ -168,10 +190,13 @@ body {
 .navbar {
     font-family: var(--font-type-secondary);
     padding: 1rem;
+    -webkit-transition: opacity 2s ease;
+    -o-transition: opacity 2s ease;
     transition: opacity 2s ease;
 }
 
 .navbar-animation-on {
+    -webkit-animation: onload 3s ease-in-out;
     animation: onload 3s ease-in-out;
 }
 
@@ -196,6 +221,8 @@ body {
 }
 
 [data-color-theme] {
+    -webkit-transition: opacity 2s ease;
+    -o-transition: opacity 2s ease;
     transition: opacity 2s ease;
 }
 
@@ -226,6 +253,8 @@ body {
 
 .badge {
     height: 1.25rem;
+    width: -webkit-min-content;
+    width: -moz-min-content;
     width: min-content;
 }
 
@@ -249,6 +278,8 @@ body {
 }
 
 .sidebar-container-menu {
+    -webkit-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
     width: 100%;
     overflow: hidden;
@@ -311,6 +342,8 @@ body {
     top: calc(50% - 2rem);
     width: 80%;
     opacity: 0;
+    -webkit-transition: opacity 1s ease;
+    -o-transition: opacity 1s ease;
     transition: opacity 1s ease;
 }
 
@@ -330,6 +363,8 @@ body {
     max-width: 600px;
 }
 .contact-form-btn {
+    width: -webkit-fit-content !important;
+    width: -moz-fit-content !important;
     width: fit-content !important;
 }
 
@@ -338,6 +373,18 @@ textarea {
 }
 
 /* || ANIMATIONS */
+
+@-webkit-keyframes onload {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+    }
+}
 
 @keyframes onload {
     0% {
@@ -380,6 +427,8 @@ textarea {
 
     .recommended-books-card {
         width: 100%;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
         justify-content: center;
     }
 
